--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
+    "moment": "^2.30.1",
     "ngrok": "^5.0.0-beta.2",
     "openai": "^4.85.1",
     "opusscript": "^0.0.8",
