--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "openai": "^4.85.1",
     "opusscript": "^0.0.8",
     "prism-media": "^1.3.5",
+    "sharp": "^0.34.0",
     "tweetnacl": "^1.0.3",
     "wav": "^1.0.2"
   }
